Add a new Texture to display the distance field. insert <GradientTexture> tag in the SLD to use it